# sagp

./: .gitignore  .gitmodules  README.md  pyproject.toml
Vision/: sagp_digital_vision_draft.aux  sagp_digital_vision_draft.out  sagp_digital_vision_draft.tex
docs/: architecture.md  membership_data_ownership.md
engineering/: membership_service_smoke.py
prompts/: event_yaml_from_docx.md
sagp_admin_processor/: README.md  __init__.py  app.py  launch.command  requirements.txt  workflows.py
sagp_admin_processor/tests/: test_workflows.py
sagp_communications_workspace/: main.py
sagp_core/: __init__.py  communication.py  contracts.py  io.py  membership.py
sagp_engines/: __init__.py  communication.py
sagp_services/: __init__.py  ai.py  membership.py  platform.py  validation.py
sagp_website/: package-lock.json
scripts/: apply_membership_update_request.py  build_membership_dashboard_data.py  build_membership_records.py  build_platform_manifest.py  build_publishing_index.py  create_event_from_docx.py  create_event_from_docx_ai.py  generate_standard_audiences.py  list_openai_models.py  process_membership_create.py  process_membership_update.py  process_publication_update.py  publish_platform_manifest_to_website.py  snapshot_membership_db.py
tests/: test_membership_create.py
